<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/logo" />




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/logLeft"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="@dimen/logLeft">


                    <TextView
                        android:id="@+id/nationality"
                        android:text="@string/Nation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/tsfif" />

                    <TextView
                        android:id="@+id/administrator"
                        android:text="@string/managerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/tsfif" />

                    <TextView
                        android:id="@+id/founded"
                        android:text="@string/FOrmedyear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/tsfif"

                        />

                    <TextView
                        android:id="@+id/web"
                        android:text="@string/weblink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/tsfif" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description" />

                    <TextView
                        android:id="@+id/updates"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:textSize="@dimen/tsfif" />



                </LinearLayout>


        </LinearLayout>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/ninety"
            android:contentDescription="@string/ad"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-6336523906622902/1584570296"
            />
    </LinearLayout>
</ScrollView>