<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/sixtenndp"
        android:paddingRight="@dimen/sixtenndp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/tendp"
            android:text="@string/lbl_forgot_password"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/twentysp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="@dimen/sixtenndp"
            android:text="@string/forgot_password_msg"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/fourteensp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tendp"
                android:layout_marginTop="@dimen/twenty"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:background="@color/btn_login_register"
            android:text="@string/btn_reset_password"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tendp"
            android:background="@null"
            android:text="@string/btn_back"
            android:textColor="@color/btn_register" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/thirtydp"
            android:layout_height="@dimen/thirtydp"
            android:layout_marginBottom="@dimen/tendp"
            android:visibility="gone" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>